20071130 doc/libspectrum.{3,txt}: document .spc, .sta and .ltp support (Stuart).
20071201 szx.c: change to Pentagon 1024 secondary memory control port after
	 discussion with Jon Needle.
20071203 szx.c: also check if a +D custom ROM is supplied but not specified and
         make sure all variables passed to the +D custom ROM zlib decompression
         are initialised (Fred).
20071205 accessor.pl,snap_accessors.txt,snapshot.c,szx.c,z80.c: add support for
         Interface 1 in z80 and szx snapshots (Fred).
20071205 z80.c: fix writing joystick info to z80 snapshots (Fred).
20071205 szx.c: fix writing if1 info to szx snapshots (Fred).
20071218 ChangeLog,Makefile.am,README,configure.in,doc/libspectrum.{3,txt},
	 libspectrum.h.in,test/test.c: update for 0.4.0 release (Stuart).
20071219 szx.c: fix warning (Stuart).
20071219 libspectrum.c: avoid warnings when building without gcrypt (Stuart).
20071219 plusd.c: #include <string.h> (Stuart).
20071221 BRANCH: libspectrum_0_4_0-branch
20071221 TAG: libspectrum_0_4_0pre1
20080104 ChangeLog,README,doc/libspectrum.3: update dates
	 (libspectrum_0_4_0-branch) (Stuart).
20080105 test/Makefile.am: distribute complete-tzx.pl and clean up after
	 ourselves (thanks, make distcheck) (libspectrum_0_4_0-branch).
20080105 test/Makefile.am: distribute test data files
         (libspectrum_0_4_0-branch).
20080105 TAG: libspectrum_0_4_0 (libspectrum_0_4_0-branch).
20080107 Merge libspectrum_0_4_0-branch changes r3447:3479 to trunk.
20080107 doc/libspectrum.txt: add Microdrive support to feature list (Stuart).
20080109 TODO: remove unused file.
20080127 libspectrum.c: compilation fix for Amiga (part of patch #1712260)
         (Chris Young).
20080217 libspectrum.c: and matching compilation fix for MorphOS (part of patch
         #1712260) (thanks, Q-Master) (Fred).
20080217 libspectrum.c: really fix compilation on MorphOS (update to patch
	 #1712260) (thanks, Q-Master) (Stuart).