@@ -609,3 +609,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          #1712260) (thanks, Q-Master) (Fred).
 20080217 libspectrum.c: really fix compilation on MorphOS (update to patch
 	 #1712260) (thanks, Q-Master) (Stuart).
+20080311 snapshot.c,snap_accessors.txt,szx.c,accessor.pl: add support for
+         saving custom machine ROMs in snapshots (szx only so far) (Fred).
